# w3gpu

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  analyze_glb.py  analyze_glb2.py  check_transparent_pixels.py
.cargo/: config.toml
.cursor/rules/: w3drs-data-driven.mdc  w3drs-native-editor-priority.mdc  w3drs-testing.mdc  w3drs-w3dts-migration.mdc
.githooks/: pre-commit
assets/models/: rolex_datejust.glb
crates/w3drs-assets/: Cargo.toml
crates/w3drs-assets/src/: gltf_loader.rs  hdr_loader.rs  lib.rs  material.rs  mesh.rs  phase_a_viewer_config.rs  primitives.rs  vertex.rs  viewer_light.rs
crates/w3drs-assets/tests/: anisotropy_gltf_loaded.rs  phase_a_fixture.rs  rolex_datejust_primitives.rs
crates/w3drs-assistant-api/: Cargo.toml
crates/w3drs-assistant-api/src/: apply_v2.rs  config.rs  edit_proposal_v2.rs  lib.rs  service.rs
crates/w3drs-assistant-http/: Cargo.toml
crates/w3drs-assistant-http/src/: lib.rs  ollama.rs
crates/w3drs-camera-controller/: Cargo.toml
crates/w3drs-camera-controller/src/: lib.rs
crates/w3drs-ecs/: Cargo.toml
crates/w3drs-ecs/benches/: transform.rs
crates/w3drs-ecs/src/: archetype.rs  lib.rs  scheduler.rs  storage.rs  world.rs
crates/w3drs-ecs/src/components/: camera.rs  dir_light.rs  hierarchy.rs  mod.rs  point_light.rs  renderable.rs  transform.rs
crates/w3drs-input/: Cargo.toml
crates/w3drs-input/src/: lib.rs
crates/w3drs-math/: Cargo.toml
crates/w3drs-math/src/: frustum.rs  sphere.rs  transform.rs
crates/w3drs-render-graph/: Cargo.toml
crates/w3drs-render-graph/src/: exec_validate.rs  lib.rs
crates/w3drs-renderer/: Cargo.toml
crates/w3drs-renderer/src/: asset_registry.rs  cull_pass.rs  error.rs  frame_uniforms.rs  gpu_context.rs  hdr_target.rs  hiz_pass.rs  ibl.rs  ibl_spec.rs  lib.rs  light_uniforms.rs  material_uniforms.rs  plugin.rs  post_process.rs  render_command.rs  render_graph_exec.rs  render_state.rs  shadow_pass.rs  vertex_layout.rs  viewer_light_rig.rs
crates/w3drs-renderer/src/shaders/: cube.wgsl  hiz_down.wgsl  hiz_init.wgsl  occlusion_cull.wgsl  pbr.wgsl  shadow_depth.wgsl  tonemap.wgsl
crates/w3drs-renderer/src/systems/: camera_system.rs  frustum_culling_system.rs  mod.rs  transform_system.rs
crates/w3drs-renderer/tests/: cull_integration.rs  phase_b_graph_exec.rs
crates/w3drs-wasm/: Cargo.toml
crates/w3drs-wasm/src/: engine.rs  lib.rs
crates/w3gpu-assets/: Cargo.toml
crates/w3gpu-assets/src/: gltf_loader.rs  hdr_loader.rs  lib.rs  material.rs  mesh.rs  primitives.rs  vertex.rs
crates/w3gpu-ecs/: Cargo.toml
crates/w3gpu-ecs/benches/: transform.rs
crates/w3gpu-ecs/src/: archetype.rs  entity.rs  lib.rs  scheduler.rs  storage.rs  world.rs
crates/w3gpu-ecs/src/components/: camera.rs  dir_light.rs  hierarchy.rs  name.rs  point_light.rs  renderable.rs  spot_light.rs  transform.rs
crates/w3gpu-math/: Cargo.toml
crates/w3gpu-math/src/: aabb.rs  frustum.rs  lib.rs  sphere.rs  transform.rs
crates/w3gpu-renderer/: Cargo.toml
crates/w3gpu-renderer/src/: asset_registry.rs  cull_pass.rs  frame_uniforms.rs  gpu_context.rs  hdr_target.rs  ibl.rs  lib.rs  light_uniforms.rs  material_uniforms.rs  plugin.rs  post_process.rs  render_command.rs  render_state.rs  shadow_pass.rs  vertex_layout.rs
crates/w3gpu-renderer/src/shaders/: bloom.wgsl  cube.wgsl  occlusion_cull.wgsl  pbr.wgsl  shadow_depth.wgsl  tonemap.wgsl  triangle.wgsl
crates/w3gpu-renderer/src/systems/: camera_system.rs  frustum_culling_system.rs  transform_system.rs
crates/w3gpu-renderer/tests/: cull_integration.rs
crates/w3gpu-wasm/: Cargo.toml
crates/w3gpu-wasm/src/: engine.rs  lib.rs
docs/: Goals.md  README.md  ROADMAP.md  api.md  architecture.md  journal.md  shaders.md
docs/design/: Mode-based v2-print.html  Mode-based v2.html  Mode-based v3 hi-fi.html  README.md  index.html  v3-hifi.css
docs/schemas/: render-graph-v0.md
docs/tickets/: README.md  phase-A-pbr-materiaux-gltf.md  phase-B-editor-ui-ux-implementation.md  phase-B-graphe-rendu-compute.md  phase-C-animation-peau.md  phase-D-format-w3db-streaming.md  phase-E-physique-interaction.md  phase-F-terrain-procedural.md  phase-G-particules-vfx.md  phase-H-audio-input.md  phase-I-rendu-hybride.md  phase-J-reseau-gameplay.md  phase-K-assistant-llm-ollama-integration.md  phase-K-editeur-workspaces.md  phase-L-industrialisation.md  phase-a-gates-record.md  phase-a-khronos-shortlist.md  phase-a-pbr-checklist-w3dts.md  phase-transverses.md
editor/: Cargo.toml  README.md
editor/src/: app.rs  assistant.rs  edit_proposal_apply.rs  editor_config.rs  lib.rs  main.rs  mode_rail.rs  motor.rs  phase_k_workspace.rs  v3_hifi.rs  viewport3d.rs  w3d_logo.rs
examples/hdr-ibl-bench/: Cargo.toml
examples/hdr-ibl-bench/src/: main.rs
examples/hdr-ibl-skybox/: Cargo.toml
examples/hdr-ibl-skybox/shaders/: env_debug.wgsl
examples/hdr-ibl-skybox/src/: main.rs
examples/khronos-pbr-sample/: Cargo.toml  render_graph_shadow_khronos.json
examples/khronos-pbr-sample/src/: lib.rs  main.rs  pbr_state.rs
examples/native-triangle/: Cargo.toml
examples/native-triangle/src/: main.rs
examples/pbr-viewer/: Cargo.toml
examples/pbr-viewer/src/: main.rs  pbr_state.rs
examples/phase-b-graph/: Cargo.toml
examples/phase-b-graph/src/: main.rs
fixtures/phases/: README.md
fixtures/phases/phase-a/: README.md  expected.md  manifest.json
fixtures/phases/phase-b/: README.md  b67_raster_depth_test.json  expected.md  render_graph.json
fixtures/phases/phase-k/: README.md  assistant-edit-proposal-v2-typed-ops.example.json  assistant-edit-proposal-v2.example.json  assistant.json  editor-ui.json  expected.md
tools/: emit_assistant_proposal_v2.py  patch_exec_validate_fields.py  patch_test_structs.py
www/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite-plugin-phase-a-gate.ts  vite.config.ts
www/e2e/: hdr-timings.spec.ts
www/public/: damaged_helmet_source_glb.glb  studio_small_03_2k.hdr
www/src/: hdrLoadTimings.test.ts  hdrLoadTimings.ts  main.ts  w3drs-globals.d.ts
xtask/src/: main.rs
(+34 files in other folders)
