[workspace]
resolver = "2"
members = [
    "crates/w3gpu-math",
    "crates/w3gpu-ecs",
    "crates/w3gpu-renderer",
    "crates/w3gpu-assets",
    "crates/w3gpu-wasm",
    "examples/native-triangle",
    "xtask",
]

[workspace.dependencies]
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.16", features = ["derive"] }
log = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "24", default-features = false }

[workspace.package]
edition = "2021"
version = "0.1.0"
