[workspace]
resolver = "2"
members = [
    "crates/w3drs-math",
    "crates/w3drs-ecs",
    "crates/w3drs-input",
    "crates/w3drs-camera-controller",
    "crates/w3drs-renderer",
    "crates/w3drs-render-graph",
    "crates/w3drs-assets",
    "crates/w3drs-wasm",
    "crates/w3drs-assistant-api",
    "crates/w3drs-assistant-http",
    "examples/khronos-pbr-sample",
    "examples/pbr-viewer",
    "examples/hdr-ibl-skybox",
    "examples/hdr-ibl-bench",
    "examples/phase-b-graph",
    "editor",
    "xtask",
]

[workspace.dependencies]
instant = "0.1"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.16", features = ["derive"] }
log = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "24", default-features = false }

[workspace.package]
edition = "2021"
version = "0.1.0"
