[package]
name = "w3d-editor"
edition.workspace = true
version.workspace = true
description = "Coquille shell de lՎditeur w3d (natif, egui/eframe)."

[[bin]]
name = "w3d-editor"
path = "src/main.rs"

[lib]
name = "w3d_editor"
path = "src/lib.rs"

[dependencies]
w3drs-assets = { path = "../crates/w3drs-assets" }
w3drs-assistant-api = { path = "../crates/w3drs-assistant-api" }
w3drs-assistant-http = { path = "../crates/w3drs-assistant-http", optional = true }
w3drs-camera-controller = { path = "../crates/w3drs-camera-controller" }
w3drs-input = { path = "../crates/w3drs-input" }
w3drs-renderer = { path = "../crates/w3drs-renderer" }
khronos_pbr = { package = "khronos-pbr-sample", path = "../examples/khronos-pbr-sample" }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
egui = "0.33"
egui-wgpu = "0.33"
wgpu = { workspace = true, features = ["wgsl", "dx12", "metal", "vulkan-portability"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
resvg = { version = "0.47.0", default-features = false }

[features]
default = []
# Client HTTP vers un serveur type Ollama (optionnel, pas requis pour un shell vide).
sidecar-ollama = ["dep:w3drs-assistant-http"]
