[package]
name = "w3drs-assets"
edition.workspace = true
version.workspace = true

[dependencies]
w3drs-math = { path = "../w3drs-math" }
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
gltf = { version = "1.4", default-features = false, features = ["names", "utils", "import", "extensions", "KHR_materials_ior", "KHR_texture_transform"] }
image = { version = "0.25", default-features = false, features = ["hdr"] }

[dev-dependencies]
serde_json.workspace = true
sha2 = { version = "0.10", default-features = false, features = ["std"] }
