[package]
name = "w3drs-ecs"
edition.workspace = true
version.workspace = true

[dependencies]
w3drs-math = { path = "../w3drs-math" }
glam.workspace = true
log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "transform"
harness = false
