[package]
name = "w3drs-renderer"
edition.workspace = true
version.workspace = true

[dependencies]
w3drs-math = { path = "../w3drs-math" }
w3drs-ecs = { path = "../w3drs-ecs" }
w3drs-assets = { path = "../w3drs-assets" }
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
pollster = "0.4"
w3drs-render-graph = { path = "../w3drs-render-graph" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true, features = ["wgsl", "dx12", "metal", "vulkan-portability"] }
rayon = "1"
w3drs-render-graph = { path = "../w3drs-render-graph" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["wgsl", "webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement",
    "Navigator", "Gpu", "GpuCanvasContext",
] }
js-sys = "0.3"
