[package]
name = "w3drs-wasm"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
w3drs-math = { path = "../w3drs-math" }
w3drs-ecs = { path = "../w3drs-ecs" }
w3drs-renderer = { path = "../w3drs-renderer" }
w3drs-assets = { path = "../w3drs-assets" }
w3drs-render-graph = { path = "../w3drs-render-graph" }
# Sans `wasm-bindgen`, `instant` attend un import hôte `env::now` (f64) — inutilisable ici.
instant = { workspace = true, features = ["wasm-bindgen"] }
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { workspace = true, features = ["wgsl", "webgpu"] }
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "Performance", "console",
] }
