[package]
name = "w3gpu-renderer"
edition.workspace = true
version.workspace = true

[dependencies]
w3gpu-math = { path = "../w3gpu-math" }
w3gpu-ecs = { path = "../w3gpu-ecs" }
w3gpu-assets = { path = "../w3gpu-assets" }
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true, features = ["wgsl", "dx12", "metal", "vulkan-portability"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["wgsl", "webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement",
    "Navigator", "Gpu", "GpuCanvasContext",
] }
js-sys = "0.3"
