[package]
name = "khronos-pbr-sample"
edition.workspace = true
version.workspace = true

[lib]
name = "khronos_pbr"
path = "src/lib.rs"

[[bin]]
name = "khronos-pbr-sample"
path = "src/main.rs"

[dependencies]
w3drs-render-graph = { path = "../../crates/w3drs-render-graph" }
w3drs-renderer = { path = "../../crates/w3drs-renderer" }
w3drs-assets = { path = "../../crates/w3drs-assets" }
w3drs-camera-controller = { path = "../../crates/w3drs-camera-controller" }
w3drs-ecs = { path = "../../crates/w3drs-ecs" }
w3drs-input = { path = "../../crates/w3drs-input" }
wgpu = { workspace = true, features = ["wgsl", "dx12", "metal", "vulkan-portability"] }
glam.workspace = true
bytemuck.workspace = true
winit = "0.30"
pollster = "0.4"
log = { workspace = true }
env_logger = "0.11"
