[package]
name = "native-triangle"
edition.workspace = true
version.workspace = true

[[bin]]
name = "native-triangle"
path = "src/main.rs"

[dependencies]
w3drs-renderer = { path = "../../crates/w3drs-renderer" }
w3drs-assets = { path = "../../crates/w3drs-assets" }
w3drs-ecs = { path = "../../crates/w3drs-ecs" }
wgpu = { workspace = true, features = ["wgsl", "dx12", "metal", "vulkan-portability"] }
glam.workspace = true
bytemuck.workspace = true
winit = "0.30"
pollster = "0.4"
log = { workspace = true }
env_logger = "0.11"
